# monkesto

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.prerelease.yml  docker-compose.yml
.github/workflows/: build.yml  build_and_test.yml  format.yml  release.yml  rust.yml  test.yml
.zed/: format.sh  settings.json
src/: account.rs  api.rs  app.rs  auth.rs  home.rs  journal.rs  main.rs  transaction.rs
src/api/: extensions.rs  main_api.rs  mod.rs  return_types.rs
src/event_sourcing/: account.rs  auth.rs  event.rs  journal.rs  libs.rs  mod.rs  user.rs
src/main_api/: return_types.rs  web_api.rs
src/site/: account.rs  app.rs  auth.rs  home.rs  journal.rs  layout.rs  mod.rs  nav.rs  person.rs  transaction.rs
src/site/transaction/: general.rs  mod.rs  transact.rs
